--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>MANDARIN</title>
     <link rel="stylesheet" href="css/styleNull.css">
     <link rel="stylesheet" href="css/styleMain.css">
     <link rel="stylesheet" href="css/styleAdaptation.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">.
-
+    <link rel="icon" href="img/favicon.png">
   </head>
   <body>
     <div class="background_block">
