--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styleMain.css">
     <link rel="stylesheet" href="css/styleAdaptation.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">.
-    <link rel="icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="img/favicon.png">
   </head>
   <body>
     <div class="background_block">
